# PyDotCompute

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  setup_cython.py
.github/workflows/: ci.yml  docs.yml
benchmarks/: extended_benchmark.py  extended_benchmark_report.json  extended_benchmark_report.txt  metal_benchmark.py  pagerank_benchmark.py  pagerank_benchmark_report.json  pagerank_benchmark_report.txt  queue_latency_benchmark.py  realtime_anomaly_benchmark.py  realtime_anomaly_report.json  realtime_anomaly_report.txt
docs/: IMPLEMENTATION_PLAN.md  idea.md  index.md
docs/api/: exceptions.md  index.md
docs/api/backends/: base.md  cpu.md  cuda.md  metal.md
docs/api/core/: accelerator.md  memory-pool.md  orchestrator.md  unified-buffer.md
docs/api/decorators/: kernel.md  ring-kernel.md  validators.md
docs/api/ring-kernels/: lifecycle.md  message.md  queue.md  runtime.md  telemetry.md
docs/articles/background/: actor-model.md  dotcompute-comparison.md  gpu-computing.md
docs/articles/concepts/: lifecycle.md  memory-management.md  message-passing.md  ring-kernels.md
docs/articles/guides/: building-actors.md  gpu-optimization.md  performance-tiers.md  pipelines.md  testing.md
docs/getting-started/: first-kernel.md  installation.md  quickstart.md
examples/: __init__.py  pagerank_actor.py  streaming_pipeline.py  vector_add.py
pydotcompute/: __init__.py  exceptions.py
pydotcompute/backends/: __init__.py  base.py  cpu.py  cuda.py  metal.py
pydotcompute/compilation/: __init__.py  cache.py  compiler.py
pydotcompute/core/: __init__.py  accelerator.py  memory_pool.py  orchestrator.py  unified_buffer.py
pydotcompute/decorators/: __init__.py  kernel.py  ring_kernel.py  validators.py
pydotcompute/ring_kernels/: __init__.py  _loop.py  array_message.py  buffer_registry.py  cython_kernel.py  fast_queue.py  lifecycle.py  message.py  queue.py  runtime.py  sync_queue.py  telemetry.py  threaded_kernel.py
pydotcompute/ring_kernels/_cython/: __init__.py  fast_spsc.c  fast_spsc.pyx
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_accelerator.py  test_backends.py  test_cache.py  test_compiler.py  test_decorators.py  test_lifecycle.py  test_memory_pool.py  test_message.py  test_metal_backend.py  test_orchestrator.py  test_queue.py  test_runtime.py  test_telemetry.py  test_unified_buffer.py  test_validators.py
